tests/paczka1/fuzzy1/97021164.err
Error in line 13: CgTGaTheJ0i S574 22,2
Error in line 19: GWVHMbzDz S577 82,3
Error in line 29: 3KbBqfH S574 69,t
Error in line 11: A808 A808 573,1
Error in line 30: A808 A188 42,4
Error in line 37: A808 S574 9,1
